# bertalign

./: .gitignore  align_word_doc.py  pyproject.toml  requirements.txt
